--- a/rockpapersizzor.html
+++ b/rockpapersizzor.html
@@ -23,6 +23,8 @@
     <h3 id="computer-move"></h3>
     <h3 id="result"></h3>
     <h3 id="score"></h3>
+    <h3>gitpush</h3>
+    
   <button onclick="localStorage.clear();
   resetscore();">Reset
  <script src="rockpapersizzor.js"></script>
